--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -13,6 +13,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static',     filename='style.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static',     filename='favicon.ico') }}">
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     {% if ((request.path == '/diagnose') or (request.path == '/diagnosis')) %}
     <!-- Jquery, loaded only on diagnosis page -->
