--- a/app/templates/diagnose.html
+++ b/app/templates/diagnose.html
@@ -73,7 +73,7 @@
 
         <br>
 
-        <div class="alert alert-primary shadow" id="diagnosis-result" role="alert"></div>
+        <div class="alert alert-secondary shadow" id="diagnosis-result" role="alert" style="border: 2px solid black;"></div>
 
     </div>
 </div>
