--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -13,7 +13,7 @@
                     <a class="nav-link {{'active' if active_page == 'diagnose' }}" href="{{ url_for('diagnose') }}">Predictor</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {{'active' if active_page == 'data' }}" href="/dashapp/">Visaul Overview</a>
+                    <a class="nav-link {{'active' if active_page == 'data' }}" href="/dashapp/">Visual Overview</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link {{'active' if active_page == 'about' }}" href="{{ url_for('about') }}">About</a>
