--- a/app/templates/diagnose.html
+++ b/app/templates/diagnose.html
@@ -59,6 +59,29 @@
                 <div class="form-check mb-4 col-md-3">
                     {{ form.obesity(class_="form-check-input") }} {{ form.obesity.label(class_="form-check-label") }}
                 </div>
+                <div class="form-check mb-4 col-md-3">
+                    {{ form.weakness(class_="form-check-input") }} {{ form.weakness.label(class_="form-check-label") }}
+                </div>
+                <div class="form-check mb-4 col-md-3">
+                    {{ form.polyphagia(class_="form-check-input") }} {{ form.polyphagia.label(class_="form-check-label") }}
+                </div>
+                <div class="form-check mb-4 col-md-3">
+                    {{ form.visual_blur(class_="form-check-input") }} {{ form.visual_blur.label(class_="form-check-label") }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-check mb-4 col-md-3">
+                    
+                </div>
+                <div class="form-check mb-4 col-md-3">
+                    {{ form.itch(class_="form-check-input") }} {{ form.itch.label(class_="form-check-label") }}
+                </div>
+                <div class="form-check mb-4 col-md-3">
+                    {{ form.itch(class_="form-check-input") }} {{ form.itch.label(class_="form-check-label") }}
+                </div>
+                <div class="form-check mb-4 col-md-3">
+                    
+                </div>
             </div>
             <div class="row">
                 <div class="col">
