--- a/app/templates/diagnose.html
+++ b/app/templates/diagnose.html
@@ -1,6 +1,6 @@
 {% extends "template.html" %} {% set active_page = "diagnose" %} {% block content %}
 <div class="container shadow rounded fadeIn p-5 my-5 bg-white" id="content">
-    <h2 style='text-align:left'>Diabetes Status Diagnosis </h2>
+    <h2 style='text-align:left'>Diabetes Status Diagnosis | Courtesy of IBM Cloud Pak for Data </h2>
     <br>
     <div class="container">
         <form action="" id="diagnosis-form" method="post">
