--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
 <div class="jumbotron text-white bg-transparent m-4" id="jumbotron" style="background-image: url('static/ai_background_transBLABLA.jpg'); background-size: auto 100%; background-repeat: no-repeat;">
     <div class="container fadeIn bg-transparent">
         <h3 class="display-3">Diabetes Early Detection <br> Classification Model</h3>
-        This site offers an example of using a machine learning model to provide a quick prediction of diabetes diagnosis.
+        This site offers an example of using a machine learning model to provide a quick prediction of diabetes diagnosis leveraging IBM Cloud Pak for Data.
     </div>
 </div>
 </div>
