--- a/app/templates/diagnose.html
+++ b/app/templates/diagnose.html
@@ -1,6 +1,6 @@
 {% extends "template.html" %} {% set active_page = "diagnose" %} {% block content %}
 <div class="container shadow rounded fadeIn p-5 my-5 bg-white" id="content">
-    <h2 style='text-align:left'>Diabetes Status Diagnosis | Courtesy of IBM Cloud Pak for Data </h2>
+    <h2 style='text-align:left'>Cloud Pak for Data - Diabetes Status Diagnosis </h2>
     <br>
     <div class="container">
         <form action="" id="diagnosis-form" method="post">
@@ -58,29 +58,6 @@
             <div class="row">
                 <div class="form-check mb-4 col-md-3">
                     {{ form.obesity(class_="form-check-input") }} {{ form.obesity.label(class_="form-check-label") }}
-                </div>
-                <div class="form-check mb-4 col-md-3">
-                    {{ form.weakness(class_="form-check-input") }} {{ form.weakness.label(class_="form-check-label") }}
-                </div>
-                <div class="form-check mb-4 col-md-3">
-                    {{ form.polyphagia(class_="form-check-input") }} {{ form.polyphagia.label(class_="form-check-label") }}
-                </div>
-                <div class="form-check mb-4 col-md-3">
-                    {{ form.visual_blur(class_="form-check-input") }} {{ form.visual_blur.label(class_="form-check-label") }}
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-check mb-4 col-md-3">
-                    
-                </div>
-                <div class="form-check mb-4 col-md-3">
-                    {{ form.itch(class_="form-check-input") }} {{ form.itch.label(class_="form-check-label") }}
-                </div>
-                <div class="form-check mb-4 col-md-3">
-                    {{ form.itch(class_="form-check-input") }} {{ form.itch.label(class_="form-check-label") }}
-                </div>
-                <div class="form-check mb-4 col-md-3">
-                    
                 </div>
             </div>
             <div class="row">
