--- a/app/static/dashstyles.css
+++ b/app/static/dashstyles.css
@@ -164,7 +164,7 @@ table tbody tr td {
     width: 100%}
 
 .dash-spreadsheet-container .dash-spreadsheet-inner td input.dash-cell-value.unfocused {
-    caret-color: #0f5132!important;
+    caret-color: #103A6D!important;
 }
 
 .dash-spreadsheet-inner .input-active {
