--- a/app/templates/diagnose.html
+++ b/app/templates/diagnose.html
@@ -1,7 +1,7 @@
 {% extends "template.html" %} {% set active_page = "diagnose" %} {% block content %}
 <div class="container shadow rounded fadeIn p-5 my-5 bg-white" id="content">
     <h1 style='text-align:center'>Diabetes Status Diagnosis </h1>
-    <h3 style="text-align: center;font-weight: 200;">Courtesey of Cloud Pak for Data with watson<span
+    <h3 style="text-align: center;font-weight: 200;">Courtesy of Cloud Pak for Data with watson<span
             style="color: blue;font-weight: 400;">x</span>.ai</h3>
     <br>
     <br>
