--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,8 +1,9 @@
 {% extends "hometemplate.html" %} {% set active_page = "home" %} {% block content %}
 <div class="jumbotron text-white bg-transparent m-4" id="jumbotron" style="background-image: url('static/ai_background_transBLABLA.jpg'); background-size: auto 100%; background-repeat: no-repeat;">
     <div class="container fadeIn bg-transparent">
-        <h3 class="display-3">Diabetes Early Detection <br> Classification Model</h3>
-        This site offers an example of using a machine learning model to provide a quick prediction of diabetes diagnosis leveraging IBM Cloud Pak for Data.
+        <h3 class="display-3" style="color:#103A6D;">Diabetes Early Detection <br> Classification Model</h3>
+        <p style="color:black">This site offers an example of using a machine learning model to provide a quick prediction of diabetes diagnosis <br> leveraging IBM Cloud Pak for Data and watson<span
+            style="color: blue;font-weight: 400;">x</span>.ai.</p>
     </div>
 </div>
 </div>
